[package]
name = "bevy-prefabs-derive"
version = "0.1.0"
authors = ["zylkowski <arkadiuszzylkowski@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
typetag = "0.1.7"
bevy = "0.5.0"
serde = "1.0.125"
syn = { version = "1.0.65"}
quote = "1.0"
